--- a/Varient.html
+++ b/Varient.html
@@ -1,5 +1,4 @@
 <html><head>
-<meta charset="utf-8"/>
 <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
 <link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Inter%3Awght%40400%3B500%3B700%3B900&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
 <meta charset="utf-8"/>
@@ -8,155 +7,167 @@
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 </head>
-<body class="bg-gray-100">
-<div class="relative flex size-full min-h-screen flex-col bg-white group/design-root overflow-x-hidden" style='font-family: Inter, "Noto Sans", sans-serif;'>
+<body class="bg-gray-900">
+<div class="relative flex size-full min-h-screen flex-col bg-[#111418] dark group/design-root overflow-x-hidden" style='font-family: Inter, "Noto Sans", sans-serif;'>
 <div class="layout-container flex h-full grow flex-col">
-<header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-gray-200 px-10 py-4">
+<header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#283039] px-10 py-4">
 <div class="flex items-center gap-8">
-<div class="flex items-center gap-3 text-gray-900">
-<span class="material-symbols-outlined text-3xl text-blue-600"> all_inclusive </span>
-<h2 class="text-gray-900 text-xl font-bold leading-tight tracking-[-0.015em]">Mission Control</h2>
+<div class="flex items-center gap-3 text-white">
+<span class="material-symbols-outlined text-3xl"> all_inclusive </span>
+<h2 class="text-white text-xl font-bold leading-tight tracking-[-0.015em]">Mission Control</h2>
 </div>
 <nav class="flex items-center gap-6">
-<a class="text-gray-600 hover:text-gray-900 text-sm font-medium leading-normal transition-colors" href="#">Overview</a>
-<a class="text-blue-600 text-sm font-bold leading-normal" href="#">Production</a>
-<a class="text-gray-600 hover:text-gray-900 text-sm font-medium leading-normal transition-colors" href="#">Quality</a>
-<a class="text-gray-600 hover:text-gray-900 text-sm font-medium leading-normal transition-colors" href="#">Inventory</a>
-<a class="text-gray-600 hover:text-gray-900 text-sm font-medium leading-normal transition-colors" href="#">Maintenance</a>
-<a class="text-gray-600 hover:text-gray-900 text-sm font-medium leading-normal transition-colors" href="#">Energy</a>
+<a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Overview</a>
+<a class="text-white text-sm font-bold leading-normal" href="#">Production</a>
+<a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Quality</a>
+<a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Inventory</a>
+<a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Maintenance</a>
+<a class="text-gray-300 hover:text-white text-sm font-medium leading-normal transition-colors" href="#">Energy</a>
 </nav>
 </div>
 <div class="flex items-center gap-4">
 <label class="relative">
-<div class="absolute inset-y-0 left-0 flex items-center pl-3 text-gray-500">
+<div class="absolute inset-y-0 left-0 flex items-center pl-3 text-[#9dabb9]">
 <span class="material-symbols-outlined"> search </span>
 </div>
-<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-gray-900 focus:outline-0 focus:ring-2 focus:ring-blue-500 border-gray-300 bg-gray-100 h-10 placeholder:text-gray-500 pl-10 pr-4 text-sm font-normal leading-normal" placeholder="Search" value=""/>
+<input class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-white focus:outline-0 focus:ring-2 focus:ring-blue-500 border-none bg-[#283039] h-10 placeholder:text-[#9dabb9] pl-10 pr-4 text-sm font-normal leading-normal" placeholder="Search" value=""/>
 </label>
-<button class="flex items-center justify-center rounded-lg h-10 w-10 bg-gray-100 text-gray-600 hover:bg-gray-200 transition-colors">
+<button class="flex items-center justify-center rounded-lg h-10 w-10 bg-[#283039] text-white hover:bg-gray-700 transition-colors">
 <span class="material-symbols-outlined"> notifications </span>
 </button>
 <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDWExiOChsu591_IyDhdpCf60wznDOyYTqaWgPQeuJwOSFiUeKCGJRkn_irIVii6W6sPM2fSvX3sq4OlK_XNIedZt0aZDDh5PBiJIra4zz1t8YpliEjGO6ozzmYd6YrhnGUykbTYCJWOUXSk-I3Kn-gzcQQtSyyTs3bpMwfWAThuvqMlHYw1lxYLDsB2lcKqTuJkQE-CEo9DGmbTNM2KcMbI7y-cdXIcEWH53fK3Rt5yrE6x7RNA9BS-Q1bigk2Uvn3rw-UTLDzY71_");'></div>
 </div>
 </header>
-<main class="flex-1 px-10 py-8 bg-gray-50">
+<main class="flex-1 px-10 py-8">
 <div class="mx-auto max-w-7xl">
-<div class="flex items-center gap-2 text-sm text-gray-500 mb-6">
-<a class="hover:text-gray-900" href="#">Home</a>
+<div class="flex items-center gap-2 text-sm text-[#9dabb9] mb-6">
+<a class="hover:text-white" href="#">Home</a>
 <span class="material-symbols-outlined text-base">chevron_right</span>
-<a class="hover:text-gray-900" href="#">Production</a>
+<a class="hover:text-white" href="#">Production</a>
 <span class="material-symbols-outlined text-base">chevron_right</span>
-<a class="hover:text-gray-900" href="#">Location B</a>
+<a class="hover:text-white" href="#">Location B</a>
 <span class="material-symbols-outlined text-base">chevron_right</span>
-<a class="hover:text-gray-900" href="#">Plant 2</a>
+<a class="hover:text-white" href="#">Plant 2</a>
 <span class="material-symbols-outlined text-base">chevron_right</span>
-<span class="text-gray-900 font-medium">Variant-Y</span>
+<div class="relative inline-block text-left group">
+<button class="flex items-center gap-1 text-white font-medium hover:text-gray-300" type="button">
+<span>Variant-Y</span>
+<span class="material-symbols-outlined text-base">arrow_drop_down</span>
+</button>
+<div class="absolute z-10 mt-2 w-48 origin-top-right rounded-md bg-[#283039] shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden group-hover:block">
+<div class="py-1" role="none">
+<a class="block px-4 py-2 text-sm text-gray-300 hover:bg-gray-700 hover:text-white" href="#" id="menu-item-0" role="menuitem">Variant-X</a>
+<a class="block px-4 py-2 text-sm text-white bg-blue-600" href="#" id="menu-item-1" role="menuitem">Variant-Y</a>
+<a class="block px-4 py-2 text-sm text-gray-300 hover:bg-gray-700 hover:text-white" href="#" id="menu-item-2" role="menuitem">Variant-Z</a>
+</div>
+</div>
+</div>
 </div>
 <div class="mb-8">
-<h1 class="text-gray-900 text-4xl font-bold leading-tight tracking-tighter">Variant-Y Details</h1>
-<p class="text-gray-600 text-base mt-2">Detailed production and performance metrics for Variant-Y.</p>
+<h1 class="text-white text-4xl font-bold leading-tight tracking-tighter">Variant-Y Details</h1>
+<p class="text-[#9dabb9] text-base mt-2">Detailed production and performance metrics for Variant-Y.</p>
 </div>
 <section>
-<h2 class="text-gray-900 text-2xl font-bold leading-tight tracking-tight mb-4">Key Performance Indicators</h2>
+<h2 class="text-white text-2xl font-bold leading-tight tracking-tight mb-4">Key Performance Indicators</h2>
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-<div class="flex flex-col gap-2 rounded-lg p-6 bg-white border border-gray-200">
-<p class="text-gray-600 text-sm font-medium">Overall Equipment Effectiveness (OEE)</p>
-<p class="text-gray-900 text-4xl font-bold">85%</p>
+<div class="flex flex-col gap-2 rounded-lg p-6 bg-[#1a1e23] border border-[#283039]">
+<p class="text-gray-400 text-sm font-medium">Overall Equipment Effectiveness (OEE)</p>
+<p class="text-white text-4xl font-bold">85%</p>
 </div>
-<div class="flex flex-col gap-2 rounded-lg p-6 bg-white border border-gray-200">
-<p class="text-gray-600 text-sm font-medium">Units Produced</p>
-<p class="text-gray-900 text-4xl font-bold">12,500</p>
+<div class="flex flex-col gap-2 rounded-lg p-6 bg-[#1a1e23] border border-[#283039]">
+<p class="text-gray-400 text-sm font-medium">Units Produced</p>
+<p class="text-white text-4xl font-bold">12,500</p>
 </div>
-<div class="flex flex-col gap-2 rounded-lg p-6 bg-white border border-gray-200">
-<p class="text-gray-600 text-sm font-medium">Defect Rate</p>
-<p class="text-gray-900 text-4xl font-bold">2.5%</p>
+<div class="flex flex-col gap-2 rounded-lg p-6 bg-[#1a1e23] border border-[#283039]">
+<p class="text-gray-400 text-sm font-medium">Defect Rate</p>
+<p class="text-white text-4xl font-bold">2.5%</p>
 </div>
-<div class="flex flex-col gap-2 rounded-lg p-6 bg-white border border-gray-200">
-<p class="text-gray-600 text-sm font-medium">First Pass Yield</p>
-<p class="text-gray-900 text-4xl font-bold">97.5%</p>
+<div class="flex flex-col gap-2 rounded-lg p-6 bg-[#1a1e23] border border-[#283039]">
+<p class="text-gray-400 text-sm font-medium">First Pass Yield</p>
+<p class="text-white text-4xl font-bold">97.5%</p>
 </div>
 </div>
 </section>
 <section class="mt-10">
-<h2 class="text-gray-900 text-2xl font-bold leading-tight tracking-tight mb-4">Historical Performance Trends</h2>
+<h2 class="text-white text-2xl font-bold leading-tight tracking-tight mb-4">Historical Performance Trends</h2>
 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-<div class="flex flex-col gap-4 rounded-lg border border-gray-200 bg-white p-6">
+<div class="flex flex-col gap-4 rounded-lg border border-[#283039] bg-[#1a1e23] p-6">
 <div>
-<p class="text-gray-900 text-lg font-medium">Daily Production Over Time</p>
+<p class="text-white text-lg font-medium">Daily Production Over Time</p>
 <div class="flex items-baseline gap-2">
-<p class="text-gray-900 text-4xl font-bold">12,500 <span class="text-2xl font-medium text-gray-500">Units</span></p>
-<div class="flex items-center gap-1 text-green-600">
+<p class="text-white text-4xl font-bold">12,500 <span class="text-2xl font-medium text-gray-400">Units</span></p>
+<div class="flex items-center gap-1 text-[#0bda5b]">
 <span class="material-symbols-outlined text-lg">trending_up</span>
 <p class="text-sm font-medium">+10%</p>
 </div>
 </div>
-<p class="text-gray-600 text-sm">Last 30 Days</p>
+<p class="text-gray-400 text-sm">Last 30 Days</p>
 </div>
 <div class="flex-1">
 <svg fill="none" height="100%" preserveAspectRatio="none" viewBox="0 0 472 150" width="100%" xmlns="http://www.w3.org/2000/svg">
 <path d="M0 109C18.1538 109 18.1538 21 36.3077 21C54.4615 21 54.4615 41 72.6154 41C90.7692 41 90.7692 93 108.923 93C127.077 93 127.077 33 145.231 33C163.385 33 163.385 101 181.538 101C199.692 101 199.692 61 217.846 61C236 61 236 45 254.154 45C272.308 45 272.308 121 290.462 121C308.615 121 308.615 149 326.769 149C344.923 149 344.923 1 363.077 1C381.231 1 381.231 81 399.385 81C417.538 81 417.538 129 435.692 129C453.846 129 453.846 25 472 25V150H0V109Z" fill="url(#paint0_linear_1131_5935)"></path>
-<path d="M0 109C18.1538 109 18.1538 21 36.3077 21C54.4615 21 54.4615 41 72.6154 41C90.7692 41 90.7692 93 108.923 93C127.077 93 127.077 33 145.231 33C163.385 33 163.385 101 181.538 101C199.692 101 199.692 61 217.846 61C236 61 236 45 254.154 45C272.308 45 272.308 121 290.462 121C308.615 121 308.615 149 326.769 149C344.923 149 344.923 1 363.077 1C381.231 1 381.231 81 399.385 81C417.538 81 417.538 129 435.692 129C453.846 129 453.846 25 472 25" stroke="#2563eb" stroke-linecap="round" stroke-width="2"></path>
+<path d="M0 109C18.1538 109 18.1538 21 36.3077 21C54.4615 21 54.4615 41 72.6154 41C90.7692 41 90.7692 93 108.923 93C127.077 93 127.077 33 145.231 33C163.385 33 163.385 101 181.538 101C199.692 101 199.692 61 217.846 61C236 61 236 45 254.154 45C272.308 45 272.308 121 290.462 121C308.615 121 308.615 149 326.769 149C344.923 149 344.923 1 363.077 1C381.231 1 381.231 81 399.385 81C417.538 81 417.538 129 435.692 129C453.846 129 453.846 25 472 25" stroke="#1173d4" stroke-linecap="round" stroke-width="2"></path>
 <defs>
 <linearGradient gradientUnits="userSpaceOnUse" id="paint0_linear_1131_5935" x1="236" x2="236" y1="1" y2="149">
-<stop stop-color="#2563eb" stop-opacity="0.1"></stop>
-<stop offset="1" stop-color="#2563eb" stop-opacity="0"></stop>
+<stop stop-color="#1173d4" stop-opacity="0.2"></stop>
+<stop offset="1" stop-color="#1173d4" stop-opacity="0"></stop>
 </linearGradient>
 </defs>
 </svg>
 </div>
 </div>
-<div class="flex flex-col gap-4 rounded-lg border border-gray-200 bg-white p-6">
+<div class="flex flex-col gap-4 rounded-lg border border-[#283039] bg-[#1a1e23] p-6">
 <div>
-<p class="text-gray-900 text-lg font-medium">Defect Rate Trends</p>
+<p class="text-white text-lg font-medium">Defect Rate Trends</p>
 <div class="flex items-baseline gap-2">
-<p class="text-gray-900 text-4xl font-bold">2.5%</p>
-<div class="flex items-center gap-1 text-red-600">
+<p class="text-white text-4xl font-bold">2.5%</p>
+<div class="flex items-center gap-1 text-[#fa6238]">
 <span class="material-symbols-outlined text-lg">trending_down</span>
 <p class="text-sm font-medium">-5%</p>
 </div>
 </div>
-<p class="text-gray-600 text-sm">Last 4 Weeks</p>
+<p class="text-gray-400 text-sm">Last 4 Weeks</p>
 </div>
 <div class="grid flex-1 grid-flow-col gap-6 items-end justify-items-center">
 <div class="flex flex-col items-center gap-2 w-full">
-<div class="w-full h-16 bg-gray-200 rounded-t-md" style="height: 40%;"></div>
-<p class="text-gray-600 text-xs font-medium">Week 1</p>
+<div class="w-full h-16 bg-[#283039] rounded-t-md" style="height: 40%;"></div>
+<p class="text-gray-400 text-xs font-medium">Week 1</p>
 </div>
 <div class="flex flex-col items-center gap-2 w-full">
-<div class="w-full h-24 bg-gray-200 rounded-t-md" style="height: 60%;"></div>
-<p class="text-gray-600 text-xs font-medium">Week 2</p>
+<div class="w-full h-24 bg-[#283039] rounded-t-md" style="height: 60%;"></div>
+<p class="text-gray-400 text-xs font-medium">Week 2</p>
 </div>
 <div class="flex flex-col items-center gap-2 w-full">
-<div class="w-full h-28 bg-gray-200 rounded-t-md" style="height: 70%;"></div>
-<p class="text-gray-600 text-xs font-medium">Week 3</p>
+<div class="w-full h-28 bg-[#283039] rounded-t-md" style="height: 70%;"></div>
+<p class="text-gray-400 text-xs font-medium">Week 3</p>
 </div>
 <div class="flex flex-col items-center gap-2 w-full">
-<div class="w-full h-36 bg-blue-500 rounded-t-md" style="height: 90%;"></div>
-<p class="text-gray-600 text-xs font-medium">Week 4</p>
+<div class="w-full h-36 bg-[#1173d4] rounded-t-md" style="height: 90%;"></div>
+<p class="text-gray-400 text-xs font-medium">Week 4</p>
 </div>
 </div>
 </div>
 </div>
 </section>
 <section class="mt-10">
-<h2 class="text-gray-900 text-2xl font-bold leading-tight tracking-tight mb-4">Active Alerts &amp; Issues</h2>
+<h2 class="text-white text-2xl font-bold leading-tight tracking-tight mb-4">Active Alerts &amp; Issues</h2>
 <div class="space-y-4">
-<div class="flex items-start gap-4 rounded-lg bg-white border border-gray-200 p-4">
-<div class="text-yellow-500 flex items-center justify-center rounded-full bg-yellow-100 shrink-0 size-10 mt-1">
+<div class="flex items-start gap-4 rounded-lg bg-[#1a1e23] border border-[#283039] p-4">
+<div class="text-yellow-400 flex items-center justify-center rounded-full bg-yellow-400/10 shrink-0 size-10 mt-1">
 <span class="material-symbols-outlined"> warning </span>
 </div>
 <div>
-<p class="text-gray-900 font-medium">High Defect Rate Alert</p>
-<p class="text-gray-600 text-sm">Machine 3 is experiencing a higher than normal defect rate. Investigate immediately.</p>
+<p class="text-white font-medium">High Defect Rate Alert</p>
+<p class="text-gray-400 text-sm">Machine 3 is experiencing a higher than normal defect rate. Investigate immediately.</p>
 </div>
 </div>
-<div class="flex items-start gap-4 rounded-lg bg-white border border-gray-200 p-4">
-<div class="text-orange-500 flex items-center justify-center rounded-full bg-orange-100 shrink-0 size-10 mt-1">
+<div class="flex items-start gap-4 rounded-lg bg-[#1a1e23] border border-[#283039] p-4">
+<div class="text-orange-400 flex items-center justify-center rounded-full bg-orange-400/10 shrink-0 size-10 mt-1">
 <span class="material-symbols-outlined"> schedule </span>
 </div>
 <div>
-<p class="text-gray-900 font-medium">Production Delay</p>
-<p class="text-gray-600 text-sm">Production line 2 is running behind schedule. Check for bottlenecks.</p>
+<p class="text-white font-medium">Production Delay</p>
+<p class="text-gray-400 text-sm">Production line 2 is running behind schedule. Check for bottlenecks.</p>
 </div>
 </div>
 </div>
@@ -165,5 +176,4 @@
 </main>
 </div>
 </div>
-
 </body></html>
